Actualización del contenido del sitio web con información de proyectos ML y AI

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arturo José Restrepo Rodríguez - Machine Learning Junior</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        section {
+            margin: 20px;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+        h2 {
+            color: #555;
+        }
+        p {
+            font-size: 1.2em;
+            line-height: 1.5;
+        }
+        .project {
+            margin-bottom: 20px;
+        }
+        .contact {
+            text-align: center;
+            margin-top: 40px;
+        }
+        .contact a {
+            background-color: #007ACC;
+            color: #fff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+    </style>
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
 
+<header>
+    <h1>Arturo José Restrepo Rodríguez</h1>
+    <p>Machine Learning Junior | Python Developer</p>
+</header>
+
+<section>
+    <h2>Sobre mí</h2>
+    <p>Soy un entusiasta del Machine Learning con una sólida base en Python, apasionado por la creación de soluciones innovadoras que impulsen la toma de decisiones basada en datos. Actualmente, busco oportunidades para aplicar y expandir mis conocimientos en un entorno profesional, contribuyendo al éxito de proyectos en inteligencia artificial.</p>
+</section>
+
+<section>
+    <h2>Proyectos Destacados</h2>
+    <div class="project">
+        <h3>Análisis de Sentimientos en Redes Sociales</h3>
+        <p>Desarrollé un modelo de machine learning para analizar sentimientos en publicaciones de Twitter, utilizando técnicas de procesamiento de lenguaje natural (NLP). El modelo ayuda a las empresas a comprender la percepción de los usuarios sobre sus productos en tiempo real.</p>
+        <a href="https://github.com/TU_USUARIO/analisis-sentimientos-twitter" target="_blank">Ver proyecto en GitHub</a>
+    </div>
+    <div class="project">
+        <h3>Clasificación de Imágenes de Frutas</h3>
+        <p>Implementé un modelo de clasificación de imágenes utilizando redes neuronales convolucionales (CNN) para identificar diferentes tipos de frutas. Este proyecto demuestra mi habilidad para trabajar con grandes volúmenes de datos y construir modelos precisos.</p>
+        <a href="https://github.com/TU_USUARIO/clasificacion-imagenes-frutas" target="_blank">Ver proyecto en GitHub</a>
+    </div>
+    <div class="project">
+        <h3>Predicción de Precios de Viviendas</h3>
+        <p>Creé un modelo de regresión lineal múltiple para predecir los precios de viviendas basado en características como el tamaño, ubicación y año de construcción. Este proyecto refleja mi capacidad para aplicar algoritmos de regresión a problemas del mundo real.</p>
+        <a href="https://github.com/TU_USUARIO/prediccion-precios-viviendas" target="_blank">Ver proyecto en GitHub</a>
+    </div>
+</section>
+
+<section class="contact">
+    <h2>Contáctame</h2>
+    <p>Estoy disponible para discutir cómo puedo contribuir a su equipo. No dude en ponerse en contacto conmigo para explorar oportunidades de colaboración.</p>
+    <a href="mailto:arturo_restrepo26@hotmail.com">Enviar correo</a>
+</section>
+
+</body>
 </html>
